--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 09 18:49:41 IST 2023
-sdk.dir=C\:\\Users\\Namish\\AppData\\Local\\Android\\Sdk
+#Fri Aug 18 17:59:04 IST 2023
+sdk.dir=C\:\\Users\\Aman Sahai\\AppData\\Local\\Android\\Sdk
