Updates and fixes

--- a/zonka_sdk/build.gradle
+++ b/zonka_sdk/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
@@ -48,4 +49,20 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:2.4.3"
 
 
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.github.zonka-feedback'
+                artifactId = 'android-sdk'
+                version = '1.3'
+            }
+        }
+    }
 }
